--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <div id="loader">
+        <img src="images/Animation - 1751657246306.gif" alt="Loading..." class="loader-gif">
+        <span class="loader-text">Loading...</span>
+    </div>
     <header>
         <div class="container header-container">
             <a href="#" class="logo">Sravya Narepalem</a>
@@ -112,6 +116,16 @@
             </div>
         </section>
     </main>
+    <script>
+        window.addEventListener('DOMContentLoaded', function () {
+            setTimeout(function () {
+                document.getElementById('loader').style.opacity = '0';
+                setTimeout(function () {
+                    document.getElementById('loader').style.display = 'none';
+                }, 500);
+            }, 2000);
+        });
+    </script>
 </body>
 
 </html>
